examples/test/testpolicy9304.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9304
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key29: value41
      key46: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value27
          key35: value37
      podSelector:
        matchLabels:
          key35: value10
          key31: value32
